--- a/package.json
+++ b/package.json
@@ -26,114 +26,114 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@epegzz/winston-dev-console": "^1.3.4",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-accessible-icon": "^1.1.1",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.1.4",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-hover-card": "^1.1.5",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.5",
+    "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@react-email/components": "0.0.16",
-    "@stepperize/react": "^4.1.3",
+    "@stepperize/react": "^4.2.0",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-query": "^5.65.1",
     "@tanstack/react-table": "^8.20.6",
     "@trpc/client": "next",
-    "@trpc/next": "next",
+    "@trpc/next": "^11.0.0-rc.730",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "@types/formidable": "^3.4.5",
-    "@types/lodash": "^4.17.4",
+    "@types/lodash": "^4.17.15",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.0",
-    "cmdk": "^1.0.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "countries-list": "^3.1.1",
     "critters": "^0.0.23",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.0.0",
-    "framer-motion": "^11.0.24",
+    "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^11.18.2",
     "fs": "^0.0.1-security",
-    "i18n-iso-countries": "^7.11.3",
+    "i18n-iso-countries": "^7.13.0",
     "jsonwebtoken": "^9.0.2",
-    "libphonenumber-js": "^1.11.16",
+    "libphonenumber-js": "^1.11.18",
     "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
-    "mime": "^4.0.4",
-    "next": "^15.1.4",
-    "next-auth": "^4.24.7",
+    "mime": "^4.0.6",
+    "next": "^15.1.6",
+    "next-auth": "^4.24.11",
     "next-rate-limit": "^0.0.3",
     "next-themes": "^0.3.0",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "^6.10.0",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-email": "^1.10.1",
+    "react-dropzone": "^14.3.5",
+    "react-email": "^3.0.6",
     "react-error-boundary": "^4.1.2",
-    "react-hook-form": "^7.51.1",
-    "react-hot-toast": "^2.4.1",
-    "react-phone-number-input": "^3.4.4",
-    "react-signature-canvas": "^1.0.6",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
+    "react-phone-number-input": "^3.4.11",
+    "react-signature-canvas": "^1.0.7",
     "server-only": "^0.0.1",
-    "sharp": "^0.33.3",
-    "superjson": "^2.2.1",
-    "swr": "^2.2.5",
-    "tailwind-merge": "^2.2.2",
+    "sharp": "^0.33.5",
+    "superjson": "^2.2.2",
+    "swr": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^3.0.2",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
-    "winston": "^3.14.2",
+    "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "zod": "^3.22.4",
+    "zod": "^3.24.1",
     "zod-form-data": "^2.0.5",
-    "zustand": "^4.5.4",
+    "zustand": "^4.5.6",
     "zustymiddleware": "^1.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/bcrypt": "^5.0.2",
-    "@types/eslint": "^8.56.2",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/eslint": "^8.56.12",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/mime": "^3.0.4",
-    "@types/node": "^20.12.2",
-    "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@types/react-signature-canvas": "^1.0.5",
+    "@types/node": "^20.17.16",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@types/react-signature-canvas": "^1.0.6",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.23",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "postcss": "^8.4.34",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^6.2.1",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.7.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.30.0"
