--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@epegzz/winston-dev-console": "^1.3.4",
     "@hookform/resolvers": "^3.10.0",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-accessible-icon": "^1.1.1",
     "@radix-ui/react-accordion": "^1.2.2",
@@ -51,6 +52,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-email/components": "^0.0.32",
     "@stepperize/react": "^4.2.0",
@@ -84,6 +86,7 @@
     "next-rate-limit": "^0.0.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.0",
+    "pdf-lib": "^1.17.1",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
