--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,9 @@
     "app/**/*.tsx",
     "app/association/**/*.tsx",
     "src/**/*.tsx",
-    "src/**/*.ts"
-, "src/components/ui/stepper.deactivated", "src/components/ui/resizable.deactivated"  ],
+    "src/**/*.ts",
+    "src/components/ui/stepper.deactivated",
+    "src/components/ui/resizable.deactivated"
+  ],
   "exclude": ["node_modules"]
 }
