--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,8 +47,9 @@
     "app/association/**/*.tsx",
     "src/**/*.tsx",
     "src/**/*.ts",
-    "src/components/ui/stepper.deactivated",
-    "src/components/ui/resizable.deactivated"
+    "src/components/**/*.tsx",
+    "src/components/**/*.ts",
+    ".vscode/(public)/page.tsx"
   ],
   "exclude": ["node_modules"]
 }
