--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
-    "@react-email/components": "^0.0.32",
+    "@react-email/components": "^0.5.2",
     "@stepperize/react": "^4.2.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.65.1",
@@ -81,15 +81,15 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
     "mime": "^4.0.6",
-    "next": "^15.1.7",
+    "next": "^15.5.2",
     "next-auth": "^4.24.7",
     "next-rate-limit": "^0.0.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.0",
     "pdf-lib": "^1.17.1",
-    "react": "18.2.0",
+    "react": "^19.1.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.5",
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.54.2",
@@ -126,13 +126,13 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.23",
+    "eslint-config-next": "^15.5.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^6.3.0",
-    "react-email": "^3.0.6",
+    "react-email": "^4.2.8",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
