--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.65.1",
     "@tanstack/react-table": "^8.20.6",
-    "@trpc/client": "next",
+    "@trpc/client": "^11.5.1",
     "@trpc/next": "^11.0.0-rc.730",
-    "@trpc/react-query": "next",
+    "@trpc/react-query": "^11.5.1",
     "@trpc/server": "next",
     "@types/formidable": "^3.4.5",
     "@types/lodash": "^4.17.15",
