--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/formidable": "^3.4.5",
     "@types/lodash": "^4.17.15",
     "bcrypt": "^5.1.1",
+    "better-auth": "^1.3.26",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
