--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "data-migration:add-gender_enum": "tsx ./prisma/migrations/20250113175744_add_gender_enum/data-migration.ts",
-    "data-migration:replace-courseId-per-courseName": "tsx ./prisma/migrations/20250116120255_delete_id_for_course_use_name_instead/data-migration.ts"
+    "data-migration:replace-courseId-per-courseName": "tsx ./prisma/migrations/20250116120255_delete_id_for_course_use_name_instead/data-migration.ts",
+    "better-auth:seed": "tsx src/scripts/create-admin.ts"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts",
@@ -83,13 +84,12 @@
     "lucide-react": "^0.436.0",
     "mime": "^4.0.6",
     "next": "^15.5.2",
-    "next-auth": "^4.24.7",
     "next-rate-limit": "^0.0.3",
-    "next-themes": "^0.3.0",
-    "nodemailer": "^6.10.0",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.9",
     "pdf-lib": "^1.17.1",
     "react": "^19.1.1",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.5",
     "react-error-boundary": "^4.1.2",
